@@ -1,7 +1,8 @@
-<HTML><HEAD><TITLE>Manpage of XBEE_CONINFOGET</TITLE>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML><HEAD><TITLE>Man page of XBEE_CONINFOGET</TITLE>
 </HEAD><BODY>
 <H1>XBEE_CONINFOGET</H1>
-Section: Linux Programmer's Manual (3)<BR>Updated: 04-Mar-2012<BR><A HREF="#index">Index</A>
+Section: Linux Programmer's Manual (3)<BR>Updated: 31-Mar-2013<BR><A HREF="#index">Index</A>
 <A HREF="../index.html">Return to Main Contents</A><HR>
 
 <A NAME="lbAB">&nbsp;</A>
@@ -11,10 +12,13 @@ xbee_conInfoGet, xbee_conInfo
 <A NAME="lbAC">&nbsp;</A>
 <H2>SYNOPSIS</H2>
 
-<B>#include &lt;<A HREF="file:/usr/include/xbee.h">xbee.h</A>&gt;</B>
+<B>#include &lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;</B>
 
 <P>
 <B>xbee_err xbee_conInfoGet(struct xbee_con *</B><I>con</I><B>, struct xbee_conInfo *</B><I>info</I><B>);</B>
+
+<P>
+<B>xbee_err xbee_conTypeGet(struct xbee_con *</B><I>con</I><B>, char **</B><I>type</I><B>);</B>
 
 <P>
 <PRE>
@@ -37,18 +41,24 @@ provides you with access to the statistical information stored with the connecti
 should be pre-allocated storage to receive the
 <I>struct xbee_conInfo</I>.
 
+<P>
+<B>xbee_conTypeGet</B>()
+
+allows you to retrieve the type of the connection that was provided when calling
+<B>xbee_conNew</B>().
+
 <A NAME="lbAE">&nbsp;</A>
 <H3>Return Value</H3>
 
 On success this function will return XBEE_ENONE, otherwise an error number from
-<I>enum xbee_errors</I> (as specified in <I>&lt;<A HREF="file:/usr/include/xbee.h">xbee.h</A>&gt;</I>)
+<I>enum xbee_errors</I> (as specified in <I>&lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;</I>)
 
 <A NAME="lbAF">&nbsp;</A>
 <H2>EXAMPLE</H2>
 
 
 <PRE>
-#include &lt;<A HREF="file:/usr/include/xbee.h">xbee.h</A>&gt;
+#include &lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;
 
 struct xbee *xbee;
 struct xbee_con *con;
@@ -96,8 +106,8 @@ Attie Grande &lt;<A HREF="mailto:attie@attie.co.uk">attie@attie.co.uk</A>&gt;
 </DL>
 <HR>
 This document was created by
-<A HREF="http://localhost/cgi-bin/man/man2html">man2html</A>,
+<A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 20:32:55 GMT, April 23, 2012
+Time: 14:27:22 GMT, March 31, 2013
 </BODY>
 </HTML>
