@@ -7,6 +7,7 @@ v3.0.9 - in progress
 	* Added 'Sensor' connection type for XBee Series 2 modules
 	* Implemented fundamental xbeeZB support - ZDO, etc will need to be implemented separately for now
 	* Enhanced C++ usability
+	* Added xbee_conTypeGet()
 
 v3.0.8 - 24 Dec 2012
 	* Fixed analog input values
